# sk-rag-aiagent

./: README.md
Day1/: .gitignore  01_langchain_llm_basics.ipynb  02_langgraph_essentials.ipynb  03_langgraph_messages_state.ipynb  04_langgraph_nodes_edges.ipynb  05_langgraph_tools_chatbot.ipynb  README.md  pyproject.toml  requirements.txt
Day1/mcp/: README.md  notes_client.py  notes_server.py  remote_langchain_docs_client.py
Day2/: .gitignore  01_basic_rag_chromadb.ipynb  README.md  pyproject.toml  requirements.txt
Day2/01_basic_rag_chromadb/: README.md  graph.py  nodes.py  state.py
Day2/02_relevance_grading_rag/: README.md  graph.py  nodes.py  prompts.py  state.py
Day2/03_hallucination_grading_rag/: README.md  graph.py  langgraph.json  nodes.py  prompts.py  retriever.py  state.py
Day2/04_agentic_rag_websearch/: README.md  graph.py  nodes.py  prompts.py  state.py
Day3/: .gitignore  01_langchain_create_agent.ipynb  02_web_search_agent.ipynb  03_custom_middleware.ipynb  04_builtin_middleware.ipynb  README.md  pyproject.toml  requirements.txt
Day3/mini_coding_agent/: graph.py  langgraph.json  middleware.py  tools.py
Day4/: .env.example  .gitignore  01_file_system.ipynb  02_basic_deep_agent.ipynb  README.md  pyproject.toml  requirements.txt
Day4/03_deep_agent_skills/: README.md  graph.py  graph_practice.py  langgraph.json
Day4/03_deep_agent_skills/skills/langgraph-docs/: SKILL.md
Day4/03_deep_agent_skills/skills/my-skill-name/: SKILL.md
Day4/deep_research/: README.md  agent.py  pyproject.toml
Day4/deep_research/research_agent/: __init__.py  prompts.py  tools.py
Day4/deep_research/research_output/: final_report_gpt5.4_sample.html
